--- a/colony_dashboard.html
+++ b/colony_dashboard.html
@@ -80,8 +80,8 @@ grid-auto-rows: minmax(0, 1fr);">
 <div class="card cell html-fill-item html-fill-container bslib-card" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
 <div class="cell-output-display html-fill-item html-fill-container">
-<div class="datatables html-widget html-fill-item html-fill-container" id="htmlwidget-ad1af71a641c2aca6ab1" style="width:100%;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-ad1af71a641c2aca6ab1">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4"],["breeder","breeder","breeder","breeder"],[100,100,100,100],[1,1,2,3],["","","",""],["BALB/cJ","BALB/cJ","BALB/cJ","BALB/cJ"],["","","",""],["paired","paired","paired","paired"],[2,2,2,2],["2024-07-18","2024-07-18","2024-07-18","2024-07-18"],["2024-08-09","2024-09-03","2024-08-12","2024-08-22"],[9,10,7,10],["2024-09-03","2024-09-30","2024-09-03","2024-09-18"],["yes","","yes",""],[null,null,null,null]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>status<\/th>\n      <th>room<\/th>\n      <th>cage_number<\/th>\n      <th>parent_cage<\/th>\n      <th>strain<\/th>\n      <th>dob<\/th>\n      <th>sex<\/th>\n      <th>num_of_mice_in_cage<\/th>\n      <th>mating_date<\/th>\n      <th>dob_litter<\/th>\n      <th>litter_size<\/th>\n      <th>wean_date<\/th>\n      <th>weaned<\/th>\n      <th>notes<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"bPaginate":false,"dom":"ifrt","language":{"info":"Showing _TOTAL_ entries"},"columnDefs":[{"className":"dt-right","targets":[2,3,8,11]},{"orderable":false,"targets":0},{"name":" ","targets":0},{"name":"status","targets":1},{"name":"room","targets":2},{"name":"cage_number","targets":3},{"name":"parent_cage","targets":4},{"name":"strain","targets":5},{"name":"dob","targets":6},{"name":"sex","targets":7},{"name":"num_of_mice_in_cage","targets":8},{"name":"mating_date","targets":9},{"name":"dob_litter","targets":10},{"name":"litter_size","targets":11},{"name":"wean_date","targets":12},{"name":"weaned","targets":13},{"name":"notes","targets":14}],"order":[],"autoWidth":false,"orderClasses":false},"selection":{"mode":"multiple","selected":null,"target":"row","selectable":null}},"evals":[],"jsHooks":[]}</script>
+<div class="datatables html-widget html-fill-item html-fill-container" id="htmlwidget-7e912bda09da292324e6" style="width:100%;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-7e912bda09da292324e6">{"x":{"filter":"none","vertical":false,"data":[["1","2"],["breeder","breeder"],[100,100],[1,3],["",""],["BALB/cJ","BALB/cJ"],["",""],["paired","paired"],[2,2],["2024-07-18","2024-07-18"],["2024-09-03","2024-08-22"],[10,10],["2024-09-30","2024-09-18"],["",""],[null,null]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>status<\/th>\n      <th>room<\/th>\n      <th>cage_number<\/th>\n      <th>parent_cage<\/th>\n      <th>strain<\/th>\n      <th>dob<\/th>\n      <th>sex<\/th>\n      <th>num_of_mice_in_cage<\/th>\n      <th>mating_date<\/th>\n      <th>dob_litter<\/th>\n      <th>litter_size<\/th>\n      <th>wean_date<\/th>\n      <th>weaned<\/th>\n      <th>notes<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"bPaginate":false,"dom":"ifrt","language":{"info":"Showing _TOTAL_ entries"},"columnDefs":[{"className":"dt-right","targets":[2,3,8,11]},{"orderable":false,"targets":0},{"name":" ","targets":0},{"name":"status","targets":1},{"name":"room","targets":2},{"name":"cage_number","targets":3},{"name":"parent_cage","targets":4},{"name":"strain","targets":5},{"name":"dob","targets":6},{"name":"sex","targets":7},{"name":"num_of_mice_in_cage","targets":8},{"name":"mating_date","targets":9},{"name":"dob_litter","targets":10},{"name":"litter_size","targets":11},{"name":"wean_date","targets":12},{"name":"weaned","targets":13},{"name":"notes","targets":14}],"order":[],"autoWidth":false,"orderClasses":false},"selection":{"mode":"multiple","selected":null,"target":"row","selectable":null}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
@@ -92,7 +92,7 @@ grid-auto-rows: minmax(0, 1fr);">
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card html-fill-item html-fill-container bslib-card" data-fill="false" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<p>There are 3 breeder cages.</p>
+<p>There are 3 breeder cages as of Thursday, September 26, 2024.</p>
 </div>
 <bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
     <template>Expand</template>
@@ -104,8 +104,8 @@ grid-auto-rows: minmax(0, 1fr);">
 <div class="card-header"><div class="card-title">Litters</div></div>
 <div class="card-body html-fill-item html-fill-container">
 <div class="cell-output cell-output-stdout html-fill-item html-fill-container">
-<pre><code>Cage 1 has 10 pups ready to be weaned in 12 days on 2024-09-30. 
-Cage 3 has 10 pups ready to be weaned in 0 days on 2024-09-18. </code></pre>
+<pre><code>Cage 1 has 10 pups ready to be weaned in 4 days on 2024-09-30. 
+Cage 3 has 10 pups ready to be weaned in -8 days on 2024-09-18. </code></pre>
 </div>
 </div>
 <bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
@@ -118,8 +118,8 @@ Cage 3 has 10 pups ready to be weaned in 0 days on 2024-09-18. </code></pre>
 <div class="card cell html-fill-item html-fill-container bslib-card" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
 <div class="cell-output-display html-fill-item html-fill-container">
-<div class="datatables html-widget html-fill-item html-fill-container" id="htmlwidget-6903ec67bd03170275d9" style="width:100%;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-6903ec67bd03170275d9">{"x":{"filter":"none","vertical":false,"data":[["1","2","3"],["weanling","weanling","weanling"],[100,100,100],[4,5,6],["1 and 2","1 and 2","1 and 2"],["BALB/cJ","BALB/cJ","BALB/cJ"],["2024-08-09","2024-08-09","2024-08-09"],[5.7,5.7,5.7],["female","female","male"],[5,5,5],["","",""],["","",""],[null,null,null],["","",""],["","",""],[null,null,null]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>status<\/th>\n      <th>room<\/th>\n      <th>cage_number<\/th>\n      <th>parent_cage<\/th>\n      <th>strain<\/th>\n      <th>dob<\/th>\n      <th>weeks_old<\/th>\n      <th>sex<\/th>\n      <th>num_of_mice_in_cage<\/th>\n      <th>mating_date<\/th>\n      <th>dob_litter<\/th>\n      <th>litter_size<\/th>\n      <th>wean_date<\/th>\n      <th>weaned<\/th>\n      <th>notes<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"bPaginate":false,"dom":"ifrt","language":{"info":"Showing _TOTAL_ entries"},"columnDefs":[{"className":"dt-right","targets":[2,3,7,9,12]},{"orderable":false,"targets":0},{"name":" ","targets":0},{"name":"status","targets":1},{"name":"room","targets":2},{"name":"cage_number","targets":3},{"name":"parent_cage","targets":4},{"name":"strain","targets":5},{"name":"dob","targets":6},{"name":"weeks_old","targets":7},{"name":"sex","targets":8},{"name":"num_of_mice_in_cage","targets":9},{"name":"mating_date","targets":10},{"name":"dob_litter","targets":11},{"name":"litter_size","targets":12},{"name":"wean_date","targets":13},{"name":"weaned","targets":14},{"name":"notes","targets":15}],"order":[],"autoWidth":false,"orderClasses":false},"selection":{"mode":"multiple","selected":null,"target":"row","selectable":null}},"evals":[],"jsHooks":[]}</script>
+<div class="datatables html-widget html-fill-item html-fill-container" id="htmlwidget-7bcdeb8311fa6ad952e3" style="width:100%;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-7bcdeb8311fa6ad952e3">{"x":{"filter":"none","vertical":false,"data":[["1","2","3"],["weanling","weanling","weanling"],[100,100,100],[4,5,6],["1 and 2","1 and 2","1 and 2"],["BALB/cJ","BALB/cJ","BALB/cJ"],["2024-08-09","2024-08-09","2024-08-09"],[6.9,6.9,6.9],["female","female","male"],[5,5,5],["","",""],["","",""],[null,null,null],["","",""],["","",""],[null,null,null]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>status<\/th>\n      <th>room<\/th>\n      <th>cage_number<\/th>\n      <th>parent_cage<\/th>\n      <th>strain<\/th>\n      <th>dob<\/th>\n      <th>weeks_old<\/th>\n      <th>sex<\/th>\n      <th>num_of_mice_in_cage<\/th>\n      <th>mating_date<\/th>\n      <th>dob_litter<\/th>\n      <th>litter_size<\/th>\n      <th>wean_date<\/th>\n      <th>weaned<\/th>\n      <th>notes<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"bPaginate":false,"dom":"ifrt","language":{"info":"Showing _TOTAL_ entries"},"columnDefs":[{"className":"dt-right","targets":[2,3,7,9,12]},{"orderable":false,"targets":0},{"name":" ","targets":0},{"name":"status","targets":1},{"name":"room","targets":2},{"name":"cage_number","targets":3},{"name":"parent_cage","targets":4},{"name":"strain","targets":5},{"name":"dob","targets":6},{"name":"weeks_old","targets":7},{"name":"sex","targets":8},{"name":"num_of_mice_in_cage","targets":9},{"name":"mating_date","targets":10},{"name":"dob_litter","targets":11},{"name":"litter_size","targets":12},{"name":"wean_date","targets":13},{"name":"weaned","targets":14},{"name":"notes","targets":15}],"order":[],"autoWidth":false,"orderClasses":false},"selection":{"mode":"multiple","selected":null,"target":"row","selectable":null}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
@@ -130,7 +130,7 @@ Cage 3 has 10 pups ready to be weaned in 0 days on 2024-09-18. </code></pre>
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card html-fill-item html-fill-container bslib-card" data-fill="false" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<p>There are 3 colony cages.</p>
+<p>There are 3 colony cages as of Thursday, September 26, 2024.</p>
 </div>
 <bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
     <template>Expand</template>
@@ -142,7 +142,7 @@ Cage 3 has 10 pups ready to be weaned in 0 days on 2024-09-18. </code></pre>
 <div class="card-header"><div class="card-title">Colony mice</div></div>
 <div class="card-body html-fill-item html-fill-container">
 <div class="cell-output cell-output-stdout html-fill-item html-fill-container">
-<pre><code>You have 15 mice (10 female and 5 male) that are about 5.7 weeks old. </code></pre>
+<pre><code>You have 15 mice (10 female and 5 male) that are about 6.9 weeks old. </code></pre>
 </div>
 </div>
 <bslib-tooltip placement="auto" bsoptions="[]" data-require-bs-version="5" data-require-bs-caller="tooltip()">
